--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "^2.2.0",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.57.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
